Ajout du déploiement auto

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
-name: Test Python App
-on: [push, pull_request]
+name: CI/CD Pipeline
+on: [push]
 
 jobs:
   test:
@@ -14,7 +14,15 @@ jobs:
           python-version: 3.x
 
       - name: Installer les dépendances
-        run: pip install pytest
+        run: pip install -r requirements.txt
 
       - name: Exécuter les tests
         run: python -m unittest test_app.py
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Déclencher le déploiement sur Render
+        run: |
+          curl -X POST "https://api.render.com/deploy/srv-cvht08jv2p9s73d9s5f0?key=w0XWEMqQD60"
