--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,18 @@ jobs:
 
       - name: Exécuter les tests
         run: python -m unittest test_app.py
+  
+  security :
+    runs-on : ubuntu-latest
+    steps : 
+      - name: Analyse du code avec SonarQube
+        run: |
+          sonar-scanner \
+          -Dsonar.organization=VOTRE_ORG \
+          -Dsonar.projectKey=VOTRE_PROJET \
+          -Dsonar.sources=. \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=$SONAR_TOKEN
 
   deploy:
     needs: test
