--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
   
   security :
     runs-on : ubuntu-latest
+    needs: test
     steps : 
       - name: Analyse du code avec SonarQube
         run: |
