--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,12 @@ jobs:
 
       - name: Exécuter les tests
         run: python -m unittest test_app.py
-        
+
       - name: Analyse du code avec SonarQube
         run: |
           sonar-scanner \
-          -Dsonar.organization=VOTRE_ORG \
-          -Dsonar.projectKey=VOTRE_PROJET \
+          -Dsonar.organization=lgpierre \
+          -Dsonar.projectKey=tp-ci-cd \
           -Dsonar.sources=. \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=$SONAR_TOKEN
