--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,11 @@ jobs:
 
       - name: Analyse du code avec SonarQube
         run: |
-          sonar-scanner \
-          -Dsonar.organization=lgpierre \
-          -Dsonar.projectKey=lgpierre_tp-ci-cd \
-          -Dsonar.sources=. \
-          -Dsonar.host.url=https://sonarcloud.io \
+          sonar-scanner 
+          -Dsonar.organization=lgpierre 
+          -Dsonar.projectKey=lgpierre_tp-ci-cd 
+          -Dsonar.sources=. 
+          -Dsonar.host.url=https://sonarcloud.io 
           -Dsonar.login=$SONAR_TOKEN
   
   deploy:
