--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,13 @@ jobs:
           -Dsonar.sources=. \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.token=${{secrets.SONAR_TOKEN}}
-        
+      
       - name: Analyse des dépendances avec Snyk
-        run: snyk test --all-projects
+        uses : snyk/actions/python@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} 
+        with : 
+            command: test
   
   deploy:
     needs: test
