--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,11 @@ jobs:
       
       - name: Analyse des dépendances avec Snyk
         uses : snyk/actions/python@master
+
+      - name: Analyse des dépendances avec Snyk
+        run: snyk test --all-projects
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} 
-        with : 
-            command: test --all-projects
   
   deploy:
     needs: test
